Dupli group is forgotten after file is reloaded #46502

Closed
opened 2015-10-16 03:16:27 +02:00 by Fabian Emmes · 4 comments

System Information
Archlinux, Sandy Bridge i5

Blender Version
Broken: v2.76

Short description of error
After saving and loading again, an assigned dupli-group disappears.

Exact steps for others to reproduce the error

  1. unzip linking_problem.zip
  2. open c.blend
  3. assign the dupli group "GroupA" to the selected empty.
  4. save the file.
  5. reload the file.
  6. notice, that the dupli group "GroupA" is no longer assigned to the empty.

Additional notes
The problem only occurs in more complicated file linking structures. I couldn't reduce the problem to less than 3 files.

Here a.blend defines groups GroupA and GroupB. (GroupB might not be needed)
The file b.blend defines a group GroupC, which contains an instance of GroupA.
The problematic c.blend has an instance of GroupC, hence, it contains an indirect dependency on a.blend/GroupA. This might be an indication where to look for the problem :-).

**System Information** Archlinux, Sandy Bridge i5 **Blender Version** Broken: v2.76 **Short description of error** After saving and loading again, an assigned dupli-group disappears. **Exact steps for others to reproduce the error** 1. unzip [linking_problem.zip](https://archive.blender.org/developer/F245367/linking_problem.zip) 2. open c.blend 3. assign the dupli group "GroupA" to the selected empty. 4. save the file. 5. reload the file. 6. notice, that the dupli group "GroupA" is no longer assigned to the empty. **Additional notes** The problem only occurs in more complicated file linking structures. I couldn't reduce the problem to less than 3 files. Here a.blend defines groups GroupA and GroupB. (GroupB might not be needed) The file b.blend defines a group GroupC, which contains an instance of GroupA. The problematic c.blend has an instance of GroupC, hence, it contains an indirect dependency on a.blend/GroupA. This might be an indication where to look for the problem :-).
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @der_fab

Added subscriber: @der_fab

This issue was referenced by b5a4a00998

This issue was referenced by b5a4a00998583223c9c68a09819303e66ec9954e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46502
No description provided.