Fix T46502: Linked dupli-group lost on reload